mod_latex_error

--- a/_posts/2020-06-30-nlp_seq2seq.md
+++ b/_posts/2020-06-30-nlp_seq2seq.md
@@ -101,9 +101,9 @@ Attention에는 두 가지 모델이 있습니다. 모델을 발표한 사람의
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="http://jalammar.github.io/visualizing-neural-machine-translation-mechanics-of-seq2seq-models-with-attention/">jalammar.github.io</a></p>
 
-위 그림에서 $\text{<END>}$는 디코더가 작동하는 시점을 알리는 신호의 역할을 합니다. $h_\text{init}$는 각 은닉 상태 벡터를 내적하여 새로운 문맥 상태 벡터 $C_4$를 생성합니다. 디코더의 첫 번째 Time step의 은닉층이 생성한 $h_4$와 이 $C_4$를 Concatenation하게 되지요. 이렇게 생성된 벡터 $[C_4;h_4]$ 는 FFNN을 거쳐 가장 적합한 아이템 *"I"*의 임베딩 벡터를 출력하게 됩니다.
+위 그림에서 `<END>`는 디코더가 작동하는 시점을 알리는 신호의 역할을 합니다. $h_\text{init}$는 각 은닉 상태 벡터를 내적하여 새로운 문맥 상태 벡터 $C_4$를 생성합니다. 디코더의 첫 번째 Time step의 은닉층이 생성한 $h_4$와 이 $C_4$를 Concatenation하게 되지요. 이렇게 생성된 벡터 $[C_4;h_4]$ 는 FFNN을 거쳐 가장 적합한 아이템 *"I"*의 임베딩 벡터를 출력하게 됩니다.
 
-다음 Time step에서는 이전 단계의 은닉층이 출력하는 은닉 상태 벡터, 즉 $h_4$가 이전 단계에서 $h_\text{init}$과 같은 역할을 하게 됩니다. 그리고 이전 단계의 $\text{<END>}$와 같은 역할은 이전 단계의 출력 벡터인 *"I"*의 임베딩 벡터가 맡게 됩니다. 동일한 과정을 거치면 *"am"*의 임베딩 벡터가 출력됩니다. 이런 과정을 계속 반복하면 *"a", "student"*의 임베딩 벡터가 생성되며 디코더는 $\text{<END>}$ 혹은 $\text{<EOS>}$ 벡터를 생성할 때까지 이 과정을 반복한 후에 문장 생성을 종료합니다.
+다음 Time step에서는 이전 단계의 은닉층이 출력하는 은닉 상태 벡터, 즉 $h_4$가 이전 단계에서 $h_\text{init}$과 같은 역할을 하게 됩니다. 그리고 이전 단계의 `<END>`와 같은 역할은 이전 단계의 출력 벡터인 *"I"*의 임베딩 벡터가 맡게 됩니다. 동일한 과정을 거치면 *"am"*의 임베딩 벡터가 출력됩니다. 이런 과정을 계속 반복하면 *"a", "student"*의 임베딩 벡터가 생성되며 디코더는 `<END>`혹은 `<END>`벡터를 생성할 때까지 이 과정을 반복한 후에 문장 생성을 종료합니다.
 
 위 과정에서 출력 시퀀스의 각 아이템이 생성될 때 인코더의 은닉 상태 벡터에게 받은 Attention(주목도)를 시각화하면 다음과 같이 나타낼 수 있습니다.
 
